# gym

./: .bazelignore  .bazelrc  .checkov.yaml  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD  BUILD.bazel  MODULE.bazel  README.md  compile_commands.json  flake.nix  go.mod  go.sum  justfile  renovate.json  zuul.yaml
.github/workflows/: pages.yml
codeforces/: 1d_eraser.cc  2_3_moves.cc  3sum_closure.cc  BUILD  a_and_b_and_team_training.cc  a_b.cc  a_b_again.cc  a_cookie_for_you.cc  a_good_string.cc  abc.cc  add_odd_or_subtract_even.cc  add_one.cc  add_to_neighbour_and_remove.cc  adding_powers.cc  advertising_agency.cc  agaga_xooorrr.cc  alice_bob_and_candies.cc  almost_all_divisors.cc  almost_prime.cc  alternating_current.cc  ambitious_kid.cc  amusing_joke.cc  and_0_sum_big.cc  and_or_and_square_sum.cc  another_problem_about_dividing_numbers.cc  anton_and_currency_you_all_know.cc  anton_and_danik.cc  anton_and_digits.cc  anton_and_letters.cc  anton_and_polyhedrons.cc  arpas_hard_exam_and_mehrdads_naive_cheat.cc  arranging_cats.cc  arranging_the_sheep.cc  array_coloring.cc  array_destruction.cc  array_reodering.cc  array_walk.cc  atillas_favorite_problem.cc  baby_ehab_partitions_again.cc  bad_ugly_numbers.cc  (+511 more)
cothic/: .gitignore  PLAN.md  README.md  export_presets.cfg  icon.svg.import  justfile  project.godot
cothic/resources/: cozy_post_process.gdshader  cozy_post_process.gdshader.uid  cozy_terrain.gdshader  cozy_terrain.gdshader.uid  ui_theme.tres  world_environment.tres
cothic/scenes/: main.tscn  player.tscn
cothic/scripts/: player_controller.gd  player_controller.gd.uid
cothic/tools/: check-godot.sh
cpp/ayncibla/: BUILD  backpack.cc  backpack_dynamic.cc  binary_search.cc  binary_search_with_duplicates.cc  calculator.cc  closest_points.cc  coin_game.cc  collecting_signatures.cc  cooking_a_dinner.cc  edit_distance.cc  fibonacci.cc  fibonacci_huge_mod.cc  fibonacci_last.cc  fibonacci_sum_last.cc  fibonacci_sum_of_squares_last.cc  fibonacci_sum_partial.cc  fueling.cc  gcd.cc  lcm.cc  lcs.cc  lcs_three.cc  lis.cc  longest_palindrom.cc  lottery.cc  majority_element.cc  max_dot_product.cc  max_pairwise_product.cc  max_sum_interval.cc  maximal_expression_value.cc  maximum_salary.cc  money.cc  money_exchange.cc  number_of_inversions.cc  number_of_prizes.cc  pirate_loot.cc  quick_sort_with_duplicates.cc
cpp/codeforces/: 01_game.cc  1d_eraser.cc  2_3_moves.cc  2_sort.cc  3sum.cc  3sum_closure.cc  BUILD  HQ9.cc  a_b.cc  abc.cc  (+859 more)
cv/: cv.tex  cv.typ  justfile  resume.json  styles.css
demo/: README.md  justfile
docs/: cv.md  index.html  styles.css
home-manager/: flake.nix  home.nix
neural_network/: BUILD  cifar10.cc  cifar10.h  cifar10_nn.cc  dataset.h  download_cifar10.sh  download_mnist.sh  justfile  mnist.cc  mnist.h  mnist_info.cc  nn.cc  nn_io.cc  nn_io.h  nn_lib.cc  nn_lib.h  nn_predict.cc  train.cc  web_server.py
pet_project/: BUILD  config.cc  config.hpp  config.json  cuda.BUILD  cudnn.BUILD  evolution.cc  evolution.hpp  fitness.cc  fitness.hpp  main.cc  onnx_config.bzl  onnxruntime.BUILD  renderer.cc  renderer.hpp  test_config.json  types.hpp
pipellm/: BUILD.bazel  README.md  main.go  pipellm.yaml.example
pipellm/client/: BUILD.bazel  client.go  client_test.go
pipellm/config/: BUILD.bazel  config.go  config_test.go
pipellm/input/: BUILD.bazel  input.go  input_test.go
playbooks/: check-coverage.yaml  deploy.yaml  gate.yaml
presentations/: justfile
production/: README.md
production/docker/blog-engine/cmd/blog-engine/: BUILD.bazel  main.go  main_test.go
production/docker/blog-engine/internal/author/: BUILD.bazel  author.go  author_test.go
production/docker/blog-engine/internal/author/static/: admin.css
production/docker/blog-engine/internal/author/templates/: detail.html  edit.html  help.html  posts.html
production/docker/blog-engine/internal/migrate/: BUILD.bazel  migrate.go
production/docker/blog-engine/internal/objectstore/: BUILD.bazel  objectstore.go  objectstore_test.go
production/docker/blog-engine/internal/posts/: BUILD.bazel  posts.go  posts_test.go
production/docker/blog-engine/internal/publication/: BUILD.bazel  publication.go  publication_test.go
production/docker/blog-engine/internal/publication/static/: public.css
production/docker/blog-engine/internal/publication/templates/: feed.html  post.html
production/docker/blog-engine/internal/web/: BUILD.bazel  web.go  web_test.go
production/docker/blog-engine/internal/web/static/: web.css
production/docker/blog-engine/internal/web/templates/: home.html  search.html
production/docker/blog-engine/internal/worker/: BUILD.bazel  worker.go  worker_test.go
ripples_cli/: README.md
ripples_cli/cmd/ripples/: BUILD.bazel  main.go
ripples_cli/pkg/tui/: BUILD.bazel  model.go
ripples_cli/pkg/world/: BUILD.bazel  loader.go
sicp/: 1.07.scm  1.08.scm  1.16.scm  1.17.scm  1.18.scm  1.19.scm  1.31.scm  1.32.scm  1.35.scm  1.36.scm  1.37.scm  1.39.scm  2.1.scm  2.10.scm  2.11.scm  2.12.scm  2.17.scm  2.18.scm  2.20.scm  2.23.scm  2.28.scm  2.29.scm  2.30.scm  2.33.scm  2.34.scm  2.35.scm  2.36.scm  2.39.scm  2.46.scm  2.5.scm  2.50.scm  2.56.scm  2.57.scm  2.60.scm  2.62.scm  2.73.scm  2.74.scm  2.75.scm  2.78.scm  2.8.scm  (+35 more)
warmup/: 3sum.cc  3sum.hpp  3sum_test.bats  BUILD  a_star.cc  a_star_gtest.cc  all_divisors.cc  all_divisors_gtest.cc  all_divisors_test.bats  backpack.cc  bfs.cc  bfs_gtest.cc  binary_heap.cc  binary_heap.hpp  binary_heap_gtest.cc  binary_heap_test.bats  binary_search_with_duplicates.cc  binary_search_with_duplicates_gtest.cc  binary_search_with_duplicates_test.bats  binary_tree.cc  binary_tree.hpp  binary_tree_gtest.cc  binary_tree_test.bats  bipartiteness_checker.cc  bipartiteness_checker.hpp  bipartiteness_test.cc  bipartiteness_test_test.bats  boyer_moore.cc  boyer_moore_gtest.cc  boyer_moore_test.bats  boyer_moore_test.sh  bubble_sort.cc  bubble_sort.hpp  bubble_sort_gtest.cc  bubble_sort_test.bats  combinations.cc  combinations.hpp  combinations_test.bats  counting_sort.cc  cycle_detection.cc  (+139 more)
zuul.d/: checks.yaml  images.yaml  project.yaml
(+919 files in other folders)
