load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "pipellm",
    embed = [":pipellm_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "pipellm_lib",
    srcs = ["main.go"],
    importpath = "src/pipellm",
    visibility = ["//visibility:private"],
    deps = [
        "//pipellm/client",
        "//pipellm/config",
        "//pipellm/input",
    ],
)
