load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "src/pipellm/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pipellm/config",
        "@com_github_google_generative_ai_go//genai",
        "@org_golang_google_api//option",
    ],
)
