load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = ["migrate.go"],
    importpath = "src/production/docker/blog-engine/internal/migrate",
    visibility = ["//visibility:public"],
    deps = [
        "//production/docker/blog-engine/internal/config",
        "//production/docker/blog-engine/internal/posts",
    ],
)
