load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "objectstore",
    srcs = ["objectstore.go"],
    importpath = "src/production/docker/blog-engine/internal/objectstore",
    visibility = ["//visibility:public"],
    deps = ["//production/docker/blog-engine/internal/config"],
)

go_test(
    name = "objectstore_test",
    srcs = ["objectstore_test.go"],
    embed = [":objectstore"],
    deps = ["//production/docker/blog-engine/internal/config"],
)
