load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "posts",
    srcs = ["posts.go"],
    importpath = "src/production/docker/blog-engine/internal/posts",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_pmezard_go_difflib//difflib",
    ],
)

go_test(
    name = "posts_test",
    srcs = ["posts_test.go"],
    embed = [":posts"],
)
